k8s/04-mysql.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql
  namespace: taskflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:

    metadata:
      labels:
        app: mysql

    spec:

      containers:

      - name: mysql

        image: mysql:8.0

        ports:
        - containerPort: 3306

        volumeMounts:

        - name: mysql-storage
          mountPath: /var/lib/mysql

      volumes:

      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc

---

apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: taskflow

spec:

  selector:
    app: mysql

  ports:

  - port: 3306
    targetPort: 3306

  type: ClusterIP
