k8s/06-backend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: taskflow

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        image: taskflow-backend:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: taskflow

spec:

  selector:
    app: backend

  ports:

  - port: 5000
    targetPort: 5000

  type: ClusterIP
