k8s/08-frontend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: taskflow

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:

      - name: frontend

        image: taskflow-frontend:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: taskflow

spec:

  selector:
    app: frontend

  ports:

  - port: 80
    targetPort: 80

  type: ClusterIP
